test/TestPhases/typechecker/invalid/CallActAsFun.blc
module

activity calc() returns float64
    await true
    return 123.321
end

activity main ()()
    var x: float64
    x = calc()
    await false
end
